--- a/app/src/main/res/layout/activity_volunteer_campaign_summary.xml
+++ b/app/src/main/res/layout/activity_volunteer_campaign_summary.xml
@@ -148,10 +148,10 @@
                 android:layout_marginRight="10dp"/>
 
             <TextView
-                android:id="@+id/durationTextView"
+                android:id="@+id/endDateTextView"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:text="Duration"
+                android:text="End Date"
                 android:textSize="18sp"
                 android:layout_weight="1"/>
 
