--- a/app/src/main/res/drawable/option_buttons.xml
+++ b/app/src/main/res/drawable/option_buttons.xml
@@ -3,8 +3,12 @@
     android:shape="rectangle">
 
     <solid
-        android:color="#CA6425" />
+        android:color="#98C1FF" />
     <corners
         android:radius="15dp"/>
+
+    <stroke
+        android:width="2dp"
+        android:color="@android:color/black" />
 
 </shape>
